All_Component_DX/force-app/main/default/objects/Parts_Request_Line__c/fields/Canceled_On__c.field-meta.xml
<CustomField>
    <fullName>Canceled_On__c</fullName>
    <description>Date/time when this part request was canceled. This is set automatically when the user cancels the parts request.</description>
    <inlineHelpText>Date/time when this part request was canceled. This is set automatically when the user cancels the parts request.</inlineHelpText>
    <label>Canceled On</label>
    <type>DateTime</type>
</CustomField>