All_Component_DX/force-app/main/default/objects/Parts_Request_Line__c/fields/Closed_On__c.field-meta.xml
<CustomField>
    <fullName>Closed_On__c</fullName>
    <description>Date/time when this parts request line was closed. This is set automatically when the receipt is processed.</description>
    <inlineHelpText>Date/time when this parts request line was closed. This is set automatically when the receipt is processed.</inlineHelpText>
    <label>Closed On</label>
    <type>DateTime</type>
</CustomField>