All_Component_DX/force-app/main/default/objects/Parts_Request_Line__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <description>Date when the requested part was received at the requested location.</description>
    <inlineHelpText>Date when the requested part was received at the requested location.</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>