All_Component_DX/force-app/main/default/objects/Parts_Request_Line__c/fields/Date_Required__c.field-meta.xml
<CustomField>
    <fullName>Date_Required__c</fullName>
    <description>Date when this part is required at the requesting location.</description>
    <inlineHelpText>Date when this part is required at the requesting location.</inlineHelpText>
    <label>Date Required</label>
    <type>Date</type>
</CustomField>