All_Component_DX/force-app/main/default/objects/Parts_Request_Line__c/fields/Parts_Request__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request__c</fullName>
    <description>Parent Parts request for this request line. Reference to an existing Parts Request in ServiceMax</description>
    <label>Parts Request</label>
    <referenceTo>Parts_Request__c</referenceTo>
    <relationshipLabel>Parts Request Lines</relationshipLabel>
    <relationshipName>Parts_Request_Line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>