All_Component_DX/force-app/main/default/objects/Parts_Request_Line__c/fields/Quantity_Received2__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Received2__c</fullName>
    <description>Received quantity of product.</description>
    <inlineHelpText>Received quantity of product.</inlineHelpText>
    <label>Qty Received</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>