All_Component_DX/force-app/main/default/objects/Parts_Request_Line__c/fields/Quantity_Required2__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Required2__c</fullName>
    <description>Required quantity of product.</description>
    <inlineHelpText>Required quantity of product.</inlineHelpText>
    <label>Qty Required</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>