All_Component_DX/force-app/main/default/objects/Parts_Request_Line__c/fields/Quantity_Shipped2__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Shipped2__c</fullName>
    <description>Actual shipped quantity of product.</description>
    <inlineHelpText>Actual shipped quantity of product.</inlineHelpText>
    <label>Qty Shipped</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>