All_Component_DX/force-app/main/default/objects/Parts_Request_Line__c/fields/SM_Batch_Lot__c.field-meta.xml
<CustomField>
    <fullName>SM_Batch_Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identification number assigned to a specific quantity or lot of materials from a single manufacturer.</description>
    <label>Batch/Lot</label>
    <referenceTo>Batch_Lot_Master__c</referenceTo>
    <relationshipLabel>Parts Request Lines</relationshipLabel>
    <relationshipName>Parts_Request_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>