All_Component_DX/force-app/main/default/objects/Parts_Request_Line__c/fields/Total_Line_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Price__c</fullName>
    <description>Total Line Price</description>
    <formula>IF(ISPICKVAL( Line_Status__c ,&apos;Completed&apos;), Unit_Price2__c * Quantity_Received2__c ,IF(ISPICKVAL( Line_Status__c ,&apos;Canceled&apos;),0, Unit_Price2__c * Quantity_Required2__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Line Price</inlineHelpText>
    <label>Total Line Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>