All_Component_DX/force-app/main/default/objects/Parts_Request_Line__c/fields/Unit_Price2__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price2__c</fullName>
    <description>Unit Price for Line Item.</description>
    <inlineHelpText>Unit Price for Line Item.</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>