All_Component_DX/force-app/main/default/objects/Parts_Request_Line__c/fields/Use_Price_From_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Use_Price_From_Pricebook__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Leave this box checked if you want the price to be filled automatically from the default price book. If you like to enter a price manually for this part, simply uncheck this box.</description>
    <inlineHelpText>Leave this box checked if you want the price to be filled automatically from the default price book. If you like to enter a price manually for this part, simply uncheck this box.</inlineHelpText>
    <label>Use Price From Pricebook</label>
    <type>Checkbox</type>
</CustomField>