All_Component_DX/force-app/main/default/objects/Parts_Request_Line__c/validationRules/SVMXC_ValidateDateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC_ValidateDateRequired</fullName>
    <active>true</active>
    <description>Required date must be a future date.</description>
    <errorConditionFormula>AND(ISNEW(),  Date_Required__c &lt;  TODAY())</errorConditionFormula>
    <errorDisplayField>Date_Required__c</errorDisplayField>
    <errorMessage>Date required cannot be a past date.</errorMessage>
</ValidationRule>